[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moge"
version = "2.0.0"
description = "MoGe: Unlocking Accurate Monocular Geometry Estimation for Open-Domain Images with Optimal Training Supervision"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "click",
    "opencv-python",
    "scipy",
    "matplotlib",
    "moderngl",
    "trimesh",
    "pillow",
    "huggingface_hub",
    "numpy",
    "torch>=2.0.0",
    "torchvision",
    "gradio"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/microsoft/MoGe"

[tool.setuptools]
packages = [
    "moge",
    "moge.model",
    "moge.test",
    "moge.scripts",
    "moge.train",
    "moge.utils",
    "moge.model.dinov2",
    "moge.model.dinov2.models",
    "moge.model.dinov2.utils",
    "moge.model.dinov2.layers",
    "moge.model.dinov2.hub",
    "utils3d",
    "utils3d.numpy",
    "utils3d.numpy.io",
    "utils3d.torch",
    "utils3d.interface",
    "pipeline",
]

[tool.setuptools.package-dir]
"" = "."
"utils3d" = "third_party/utils3d/utils3d"
"pipeline" = "third_party/pipeline/pipeline"

[project.scripts]
moge = "moge.scripts.cli:main"